# webrtc-speakers

./: .gitignore  build.gradle.kts  settings.gradle.kts
certs/: server.csr  server.key  server.p12
cpp/: CMakeLists.txt  Makefile  admin.crt  app.cpp  audio_capture_module.cpp  audio_capture_module.hpp  audio_config.cpp  audio_config.hpp  audio_device_info.cpp  audio_device_info.hpp  audio_feeder.cpp  audio_feeder.hpp  audio_handler_interface.hpp  audio_source.cpp  audio_source.hpp  conductor.cpp  conductor.hpp  dummy_rtc_client.cpp  dummy_rtc_client.hpp  ixwebsocket.cpp  main.cpp  peer_connection.cpp  peer_connection.hpp  rtc_client.cpp  rtc_client.hpp  rtcp.cpp  server.crt  settings.cpp  settings.hpp  signaling_client.cpp  signaling_client.hpp  signaling_client_interface.hpp  test.cpp  video_track_source.cpp  video_track_source.hpp  virtual_audio_output.cpp  virtual_audio_output.hpp  webrtc.cpp  webrtc.version  webrtc_includes.h
gradle/wrapper/: gradle-wrapper.properties
scripts/: pulseaudio.sh
src/main/java/org/example/: Controller.java  Main.java  TomcatConfig.java  WebSocketConfig.java  WebSocketConfiguration.java
src/main/resources/: application.properties  log4j.properties
src/main/resources/keystore/: .keystore  admin.p12  bimba.p12  keystore.p12  server.crt  truststore.jks
src/main/resources/static/js/: peer.js  peer.js~  signaling_channel.js
src/main/resources/templates/: index.html
